added carrierwave, figaro, and fog. Set up aws for pic uploading. Added pictures to gram table in db.

--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,1 +1,10 @@
 <h1>Grams</h1>
+
+<% @gram.each do |gram| %>
+<div>
+
+  <%= image_tag gram.picture %>
+  <br />
+  <%= gram.message %>
+</div>
+<%end%>
