--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -4,6 +4,8 @@
   <%= simple_form_for @gram do |f| %>
     <%= f.input :message %>
     <br />
+    <%= f.input :picture %>
+    <br />
     <%= f.submit "Post!" %>
   <%end%>
 </div>
